--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,5 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: black;
-    color: white;
+    background-color: #f0f0f0;
 }
