--- a/styles.css
+++ b/styles.css
@@ -9,5 +9,6 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: #f0f0f0;
+    background-color: #fff;
+    background-size: 400% 400% !important;
 }
